--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
